# growth-pilot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yaml  package.json  pnpm-lock.yaml
backend/: Dockerfile  Procfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 030c01ae2f05_soft_leads_add_name_column.py  887ca5894acd_businesses_add_slug_column.py  8bcbc66b3897_initial_schema_12_tables.py  9316c55268b5_businesses_slim_columns_add_enriched_.py  981fe20a943f_add_businesses_table.py  bbd857b9748f_competitors_nullable_outlet_id_add_.py  bff2561d41d1_add_discover_users_and_user_reviews_.py  ed10d7bbf693_competitors_add_postcode_lat_lng_columns.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  audits.py  billing.py  businesses.py  dev.py  (+7 more)
backend/app/core/: auth.py  config.py  deps.py
backend/app/models/: __init__.py  audit.py  business.py  competitor.py  content.py  dimension.py  discover_user.py  mission.py  organization.py  outlet.py  seeded_area.py  soft_lead.py  subscription.py  user.py  user_review.py
backend/app/schemas/: audit.py  billing.py  competitor.py  dashboard.py  mission.py  organization.py  outlet.py
backend/app/services/: cache.py  claude_ai.py  discover.py  firecrawl.py  local_authority.py  maps_resolver.py  mock.py  resend_email.py  reviews.py  serpapi.py  stripe_billing.py  telegram.py  youtube.py
backend/app/tasks/: __init__.py  analysis.py  content.py  db.py  free_audit.py  notification.py  scheduler.py  scraping.py
backend/app/utils/: slug.py
backend/tests/: conftest.py  test_discover_service.py
(+78 files in other folders)
